Add Category page as Template

--- a/_sass/color_schemes/jb2a-theme.scss
+++ b/_sass/color_schemes/jb2a-theme.scss
@@ -3,12 +3,7 @@
 // Colors
 $link-color: #ffba00;
 $body-background-color: #212121;
-$body-text-color: #cacaca;
+$body-text-color: #dfdfdf;
 $sidebar-color: #141414;
 
-
-// Text
-.main-content {
-    text-align: justify !important;
-}
 
