Add button style to custom.scss

--- a/_sass/color_schemes/jb2a-theme.scss
+++ b/_sass/color_schemes/jb2a-theme.scss
@@ -5,6 +5,8 @@
 // Grey
 /// 000
 $sidebar-color: $jb2a_grey-000;
+//$feedback-color: darken($sidebar-color, 3%);
+$feedback-color: $jb2a_grey-100;
 /// 100
 $body-background-color: $jb2a_grey-100;
 $base-button-color: $jb2a_grey-100;
